kubernetes-local/questions.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: questions
  labels:
    app: questions
spec:
  replicas: 1
  selector:
    matchLabels:
      app: questions
  template:
    metadata:
      labels:
        app: questions
    spec:
      containers:
      - name: questions
        image: cs3219-g5/questions
        imagePullPolicy: IfNotPresent # setting local image
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: questions
spec:
  selector:
    app: questions
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: NodePort
