kubernetes-local/local-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: internal-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    # nginx.ingress.kubernetes.io/auth-url: http://peerprep-g5.ml/api/user/jwt_validate # need to set this to some external service
    # nginx.ingress.kubernetes.io/auth-signin: localhost/user/user_login # route this to the login page
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "cs3219-g5-cookie"
    nginx.ingress.kubernetes.io/affinity-mode: "persistent"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: front-end
            port: 
              number: 3000
      - path: /api/user
        pathType: Prefix
        backend:
          service:
            name: user
            port: 
              number: 3000
      - path: /api/questions
        pathType: Prefix
        backend:
          service:
            name: questions
            port: 
              number: 3000
      - path: /api/match
        pathType: Prefix
        backend:
          service:
            name: match
            port: 
              number: 3000
      # - path: /api/chat
      #   pathType: Prefix
      #   backend:
      #     service:
      #       name: chat
      #       port: 
      #         number: 3000
      # - path: /api/editor
      #   pathType: Prefix
      #   backend:
      #     service:
      #       name: text
      #       port: 
      #         number: 3000
