kubernetes-local/local-internal.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: internal-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    # nginx.ingress.kubernetes.io/auth-url: https://jwt-test-cs3219.herokuapp.com/jwt/validate_token # need to set this to some external service
    # nginx.ingress.kubernetes.io/auth-signin: https://jwt-test-cs3219.herokuapp.com/jwt/login # route this to the login page
    # nginx.ingress.kubernetes.io/affinity: "cookie"
    # nginx.ingress.kubernetes.io/session-cookie-name: "cs3219-g5-cookie"
    # nginx.ingress.kubernetes.io/affinity-mode: "persistent"
spec:
  rules:
  - http:
      paths:
      - path: /api/questions
        pathType: Prefix
        backend:
          service:
            name: questions
            port: 
              number: 3000
      - path: /api/match
        pathType: Prefix
        backend:
          service:
            name: match
            port: 
              number: 3000
      - path: /api/chat
        pathType: Prefix
        backend:
          service:
            name: chat
            port: 
              number: 3000
      - path: /api/editor
        pathType: Prefix
        backend:
          service:
            name: text
            port: 
              number: 3000
